--- a/src/user-index.css
+++ b/src/user-index.css
@@ -19,7 +19,7 @@
       padding-left: 20px;
 
       position: relative;
-      top: 120px;
+      top: 50px;
       box-shadow: 3px 3px 10px;
 
     transition: all .2s ease-in-out;
